[package]
name = "fdblite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
etcd-client = { path = "./vendor/etcd-client", features = ["pub-response-field"] }
futures = "0.3.21"
tokio = { version = "1.19.2", features = ["full"] }

[dev-dependencies]
serial_test = "0.8.0"